[package]
name = "alto"
description = "Idiomatic interface for OpenAL 1.1 and extensions (including EFX)"
version = "2.0.3"
authors = ["Jameson Ernst <jameson@jpernst.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jpernst/alto.git"
documentation = "https://docs.rs/alto"
keywords = ["openal", "al", "sound", "audio"]
categories = ["multimedia::audio", "api-bindings"]

[dependencies]
lazy_static = "0.2.1"
enum_primitive = "0.1.0"
al-sys = "0.5.1"
