[package]
name = "alto"
description = "Idiomatic interface for OpenAL 1.1 and extensions (including EFX)"
version = "3.0.3"
authors = ["Jameson Ernst <jameson@jpernst.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jpernst/alto.git"
documentation = "https://docs.rs/alto"
homepage = "https://www.jpernst.com"
keywords = ["openal", "al", "sound", "audio"]
categories = ["multimedia::audio", "api-bindings"]

[dependencies]
lazy_static = "0.2.1"
parking_lot = "0.4.4"
al-sys = { version = "0.6.0", path = "al-sys" }
