[package]
name = "al-sys"
description = "Raw bindings for OpenAL 1.1"
version = "0.5.3"
authors = ["Jameson Ernst <jameson@jpernst.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jpernst/alto.git"
documentation = "https://docs.rs/al-sys"
homepage = "https://www.jpernst.com"
keywords = ["openal", "al", "sound", "audio"]
categories = ["multimedia::audio", "external-ffi-bindings"]

[build-dependencies]
pkg-config = "0.3.8"

[dependencies]
rental = "0.5.0"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
libloading = "0.5"
